--- a/chess_soc/templates/index.html
+++ b/chess_soc/templates/index.html
@@ -52,7 +52,7 @@
                   <a class="nav__link" href="/events">Events</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="/articles">Articles</a>
+                  <a class="nav__link" href="/resources">Resources</a>
                 </li>
               </ul>
             </nav>
