--- a/chess_soc/templates/about.html
+++ b/chess_soc/templates/about.html
@@ -50,7 +50,7 @@
                   <a class="nav__link" href="/events">Events</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="/articles">Articles</a>
+                  <a class="nav__link" href="/resources">resources</a>
                 </li>
               </ul>
             </nav>
