--- a/chess_soc/templates/resources.html
+++ b/chess_soc/templates/resources.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="icon" type="image/png" href="{% static 'favicon.png' %}">
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <link rel="stylesheet" href="{% static 'resources.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap-theme.css' %}">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -49,7 +49,7 @@
                   <a class="nav__link" href="/events">Events</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="/articles">Articles</a>
+                  <a class="nav__link" href="/resources">Resources</a>
                 </li>
               </ul>
             </nav>
@@ -62,6 +62,25 @@
           </div>
         </div>
     </header>
+    <div class="resources">
+      <div class="resource">
+        <div class="resource-content">
+          <h3 class="resource-title">Resource 1</h3>
+          <p class="resource-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem aliquam eos perferendis sequi earum aperiam, at commodi ex quis soluta illum exercitationem mollitia veniam amet quibusdam optio labore nihil!</p>
+          <a href="{% static 'mugnus.png' %}" class="download-button">Download</a>
+        </div>
+        <img src="{% static 'favicon.png' %}" alt="Resource 1" class="resource-image">
+      </div>
+
+      <div class="resource">
+        <div class="resource-content">
+          <h3 class="resource-title">Resource 2</h3>
+          <p class="resource-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem aliquam eos perferendis sequi earum aperiam, at commodi ex quis soluta illum exercitationem mollitia veniam amet quibusdam optio labore nihil!</p>
+          <a href="{% static 'mugnus.png' %}" class="download-button">Download</a>
+        </div>
+        <img src="{% static 'favicon.png' %}" alt="Resource 1" class="resource-image">
+      </div>
+    
     <script src="{% static 'script.js' %}"></script>
     <script src="{% static 'jquery.js' %}"></script>
     <script src="{% static 'bootstrap.js' %}"></script>
