bottom navbar added

--- a/chess_soc/static/style.css
+++ b/chess_soc/static/style.css
@@ -32,6 +32,12 @@ body {
   z-index: 1001;
 }
 
+#nav-header{
+  position: fixed;
+  width: 100%;
+  z-index: 1001;
+}
+
 .top-bar {
   background-color: rgb(39, 44, 51);
 }
