--- a/chess_soc/static/home_navbar.css
+++ b/chess_soc/static/home_navbar.css
@@ -22,6 +22,7 @@ body{
 }
 .bottom-navbar{
     width: 100%;
+    height: 100px;
     top: 0;
     right: 0;
     z-index: 1001;
@@ -43,6 +44,7 @@ body{
     padding: 5px 0;
     margin: 0px 30px;
     transition: all .50s ease;
+    
 }
 .bottom-navbar-elements a:hover{
     color: var(--main-color)
@@ -60,14 +62,14 @@ body{
         padding: 14px 2%;
         transition: .2s;
     }
-    .navbar a{
+    .bottom-navbar-elements a{
         padding: 5px 0;
         margin: 0px 20px;
 
     }
 }
 @media (max-width: 90px){
-    .navbar{
+    .bottom-navbar-elements{
         position: absolute;
         top: 100%;
         right: -100%;
@@ -80,21 +82,21 @@ body{
         border-radius: 10px;
         transition: all .50s ease;
     }
-    .navbar a{
+    .bottom-navbar-elements a{
         display: block;
         margin: 5px 0;
         padding: 0px 25px;
         transition: all .50s ease;
     }
-    .navbar a:hover{
+    .bottom-navbar-elements a:hover{
         color: var(--text-color);
         transform: translateY(5px);
 
     }
-    .navbar a.active{
+    .bottom-navbar-elements a.active{
         color: var(--text-color);
     }
-    .navbar .open{
+    .bottom-navbar-elements .open{
         right: 2%;
     }
 }
@@ -104,12 +106,12 @@ body{
     }
 }
 @media(max-width:470px){
-    .navbar a{
+    .bottom-navbar-elements a{
         font-size: 1rem;
     }
 }
 @media(max-width:435px){
-    .navbar a{
+    .bottom-navbar-elements a{
         font-size: .85rem;
     }
 }
@@ -120,13 +122,13 @@ body{
 
 }
 @media(max-width:370px){
-    .navbar a{
+    .bottom-navbar-elements a{
         font-size: .75rem;
     }
 }
 
 @media(max-width:346px){
-    .navbar a{
+    .bottom-navbar-elements a{
         font-size: .7rem;
     }
 }
