--- a/chess_soc/static/home_2.css
+++ b/chess_soc/static/home_2.css
@@ -30,7 +30,7 @@ img {
 .tooltip .tooltiptext {
   visibility: visible;
   width: 150px;
-  background-color: #222327;
+  background-color: transparent;
   color: #fff;
   text-align: center;
   padding: 5px 0;
