--- a/chess_soc/templates/about.html
+++ b/chess_soc/templates/about.html
@@ -12,7 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>NPS Chess Society</title>
+    <title>NPSi Chess Society</title>
     <script defer src="{% static 'script.js' %}"></script>
 </head>
 <body>
