--- a/contact.css
+++ b/contact.css
@@ -1,7 +1,3 @@
-/* RESET */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
-
 * {
   margin: 0;
   padding: 0;
@@ -27,7 +23,7 @@ button {
 /* BASE STYLES */
 body {
   background-color: #222327;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'IBM Plex Mono', sans-serif;
   min-height: 100vh; /* Changed from 500vh */
 }
 
@@ -83,7 +79,7 @@ body {
   justify-content: start;
 }
 
-.logo__img {
+.logo-img {
   height: 110px;
   width: 230px;
 }
@@ -155,75 +151,149 @@ body {
   transform: translateY(-7px) rotate(-45deg);
 }
 
-/* Code for the column of resources */
-.resources {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 50px;
+.all_cards{
   padding-top: 13%;
+  margin: 0 auto; /*centers for us*/
+  display: grid;
+  font-family: 'IBM Plex Mono', 'Roboto Mono', monospace;
+  font-weight: 10000;
+  grid-template-columns: repeat(3,1fr);
+  gap: 15px;
+  z-index: 1;
 }
 
-.resource {
-  margin-bottom: 30px;
-  display: flex;
-  align-items: flex-start;
-  height: 200px;
-  background-color: #1c1d21;
+.flip-card {
+  background-color: transparent;
+  width: 30vw;
+  height: 38vh;
+  perspective: 1000px;
+  font-family: sans-serif;
 }
 
-.resource-image {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-right: 20px;
-  order: -1; /* Moves the image to the top */
-  margin-top: 2%;
-  margin-left: 1%;
+.title {
+  font-size: 1.5em;
+  font-weight: 900;
+  text-align: center;
+  margin: 0;
 }
 
-.resource-content {
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
   display: flex;
   flex-direction: column;
-  flex-grow: 1; /* Expands to take available horizontal space */
-}
-
-.resource-title {
-  font-family: 'Montserrat', sans-serif;
-  color: #fff;
-  font-size: 18px;
-  margin-bottom: 10px;
-  padding-top: 2%;
-}
-
-.resource-description {
-  font-family: 'Lato', sans-serif;
-  font-size: 14px;
-  color: #888;
-  margin-bottom: 10px;
-  flex-grow: 1; /* Expands to take available vertical space */
-}
-
-.download-button {
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 14px;
-  padding: 8px 15px;
-  border-radius: 5px;
-  background-color: #0071e3;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-  transition: background-color 0.2s;
-  display: flex;
   justify-content: center;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border: 1px solid rgb(65, 65, 65);
+  border-radius: 1rem;
 }
 
-.download-button:hover {
-  background-color: #0050b3;
+.flip-card-front {
+  color: #1ca61e;
+  background-color: rgb(42, 37, 37);
 }
 
-/* MEDIA QUERIES */
+.flip-card-back {
+  color: rgb(255, 255, 255);
+  background-color: #19541a;
+  transform: rotateY(180deg);
+}
 
+.contribs{
+  margin-top: 3%;
+}
+.flip-card-last{
+  background-color: transparent;
+  width: 30vw;
+  height: 38vh;
+  perspective: 1000px;
+  font-family: sans-serif;
+  margin-left:50%;
+}
+.flip-card-slast{
+  background-color: transparent;
+  width: 30vw;
+  height: 38vh;
+  perspective: 1000px;
+  font-family: sans-serif;
+  margin-left:50%;
+}
+.flip-card-last:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card-slast:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+@media(max-width:1085px) {
+  .all_cards{
+    padding-top: 16%;
+}
+}
+@media(max-width:900px) {
+  .all_cards{
+    padding-top: 20%;
+}
+}
+@media(max-width:800px) {
+  .all_cards{
+    padding-top: 24%;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+}
+.flip-card{
+  width: 100%;
+}
+.flip-card-slast
+{
+width: 100%;
+margin-left: 0;
+}
+.flip-card-last
+{
+width: 100%;
+margin-left: 50%;
+}
+}
+@media(max-width:675px) {
+.all_cards{
+padding-top: 27%;
+}  
+}
+@media(max-width:535px) {
+.all_cards{
+  padding-top: 30%;
+}  
+}
+@media(max-width:450px) {
+  .all_cards{
+    padding-top: 35%;
+    grid-template-columns: repeat(1,1fr);
+  }  
+  .flip-card-last
+{
+width: 100%;
+margin-left: 0;
+}
+  }
+@media (max-width:395px) {
+.all_cards{
+  padding-top: 43%;
+}
+}
 @media (max-width: 700px) {
   .nav {
     position: fixed;
@@ -244,9 +314,8 @@ body {
   .nav__link {
     font-size: 14px;
   }
-
-  .top-bar__content {
-    padding: 0 2px;
+  .top-bar__content {     
+    padding: 0 2px;     
     justify-content: center;
   }
 
@@ -258,33 +327,6 @@ body {
   .hamburger {
     display: block;
   }
-
-  /* Responsive styles for resources */
-  .resources {
-    padding: 30px; /* Adjusted padding */
-    padding-top: 10%; /* Adjusted padding-top */
-  }
-
-  .resource {
-    height: auto; /* Adjusted height */
-    flex-direction: column; /* Changed to column layout */
-    align-items: center; /* Center align items */
-    text-align: center; /* Center align text */
-  }
-
-  .resource-image {
-    margin-top: 2%; /* Reset margin-top */
-    margin-bottom: 10px; /* Add some space between image and content */
-    margin-left: 6%
-  }
-
-  .resource-content {
-    margin-top: 10px; /* Add some space between image and content */
-  }
-
-  .resource-description {
-    font-size: 12px; /* Decreased font size */
-  }
 }
 
 @media (max-width: 360px) {
@@ -293,49 +335,13 @@ body {
   }
 }
 
-@media (min-width: 1300px) {
+@media (min-width: 1300px) { 
   .bottom-bar__content {
     min-height: 110px;
     padding: 0 30px;
-    margin: 0 auto;
+    margin: 0 auto;  
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-}
-
-@media (max-width: 1150px){
-    .resources{
-        padding-top: 15%;
-    }
-}
-@media (max-width: 980px){
-    .resources{
-        padding-top: 20%;
-    }
-}
-@media (max-width: 720px){
-    .resources{
-        padding-top: 25%;
-    }
-}
-@media (max-width: 590px){
-    .resources{
-        padding-top: 30%;
-    }
-}
-@media (max-width: 490px){
-    .resources{
-        padding-top: 35%;
-    }
-}
-@media (max-width: 410px){
-    .resources{
-        padding-top: 43%;
-    }
-}
-@media (max-width: 340px){
-    .resources{
-        padding-top: 48%;
-    }
 }
