--- a/events.css
+++ b/events.css
@@ -1,6 +1,4 @@
-/* RESET */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -16,13 +14,18 @@ a {
   color: inherit;
 }
 
-
+button {
+  background: none;
+  border: none;
+  font: inherit;
+  color: inherit;
+}
 
 /* BASE STYLES */
 body {
   background-color: #222327;
-  font-family: 'Montserrat', sans-serif;
-  min-height: 500vh;
+  font-family: 'IBM Plex Mono', sans-serif;
+  min-height: 100vh; /* Changed from 500vh */
 }
 
 /* NORMAL STYLES */
@@ -35,6 +38,7 @@ body {
 .top-bar {
   background-color: rgb(39, 44, 51);
 }
+
 .top-bar__content {
   height: 30px;
   max-width: 1200px;
@@ -62,12 +66,11 @@ body {
   min-height: 110px;
   max-width: 1200px;
   padding: 0 30px;
-  margin: 0 auto;  
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
 
 .logo {
   vertical-align: middle;
@@ -79,10 +82,8 @@ body {
 
 .logo__img {
   height: 110px;
-  width:230px;
-
+  width: 230px;
 }
-
 
 .nav {
   transition: all 0.3s ease-in-out;
@@ -91,7 +92,6 @@ body {
 .nav__list {
   display: flex;
   column-gap: 40px;
-
 }
 
 .nav__link {
@@ -103,6 +103,22 @@ body {
 .nav__link:hover,
 .nav__link:focus {
   color: rgba(255, 255, 255, 1);
+}
+
+.btn {
+  padding-top: 10%;
+  color: #fff;
+  background-color: #0071e3;
+  padding: 8px 20px;
+  border-radius: 1000px;
+  font-size: 12px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  background-color: rgb(28, 128, 228);
 }
 
 .hamburger {
@@ -136,7 +152,119 @@ body {
   transform: translateY(-7px) rotate(-45deg);
 }
 
-/* MEDIA QUERIES */
+.all_cards{
+    padding-top: 12%;
+    margin: 0 auto; /*centers for us*/
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 15px;
+}
+@media (max-width: 600px){
+    .all_cards{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media (max-width: 350px){
+    .all_cards{
+        grid-template-columns: repeat(1,1fr);
+}}
+@media (max-width: 1024px){
+  .all_cards{
+      padding-top: 15%;
+}}
+@media (max-width: 942px){
+    .all_cards{
+        padding-top: 18%;
+}}
+@media (max-width: 812px){
+  .all_cards{
+      padding-top: 20%;
+}}
+
+@media (max-width: 720px){
+    .all_cards{
+        padding-top: 24%;
+}}
+
+@media (max-width: 620px){
+    .all_cards{
+        padding-top: 27%;
+}}
+    
+@media (max-width: 540px){
+    .all_cards{
+        padding-top: 29%;
+}}
+@media (max-width: 490px){
+  .all_cards{
+      padding-top: 32%;
+}}
+
+@media (max-width: 465px){
+    .all_cards{
+        padding-top: 36%;
+}}
+@media (max-width: 415px){
+    .all_cards{
+        padding-top: 38%;
+}}
+@media (max-width: 380px){
+    .all_cards{
+        padding-top: 42%;
+}}
+@media (max-width: 330px){
+  .all_cards{
+      padding-top: 45%;
+}}
+    
+.cardimg{
+    width: 100%;
+    display: block;
+    border-radius: 10px;
+}
+
+.content{
+    line-height: 1.4;
+    font-size: .7em;
+    padding: 15px;
+    background: rgb(80, 80, 80);
+    color: azure;
+    font-family: 'Montserrat', sans-serif;
+    border-radius: 10px;
+}
+
+.extra{
+    padding:15px;
+    display: flex;
+    justify-content: space-between;
+    background: rgba(78, 78, 78, 0.2);
+    border-radius: 10px;
+}
+
+.link{
+    text-decoration: none;
+    color: cadetblue;
+    font-size: .8em;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.link:hover{
+    color: rgb(186, 255, 82);
+    transition-duration: .9s;
+    transform: translateY(5px);
+}
+
+.content > p:first-of-type{
+    margin-top: 0px;
+}
+
+.content > p:last-of-type{
+    margin-bottom: 0px;
+}
+
+h1{
+    color: rgb(172, 73, 7);
+}
 @media (max-width: 700px) {
   .nav {
     position: fixed;
@@ -188,8 +316,3 @@ body {
     align-items: center;
   }
 }
-
- 
-
-
-
