--- a/homepage.css
+++ b/homepage.css
@@ -217,7 +217,8 @@ body {
   
   .feature {
     text-align: center;
-    max-width: 300px;
+    max-width: 570px;
+
   }
   
   .feature__icon {
@@ -282,7 +283,14 @@ body {
     padding-top: 15%;
   }
 }
-
+@media (max-width: 485px){
+  .btn{
+    margin-left: 38%;
+  }
+  .btn1{
+    margin-left: 35.5%;
+  }
+}
 
   @media (max-width: 700px) {
     .nav {
