--- a/homepage.css
+++ b/homepage.css
@@ -147,7 +147,7 @@ body {
   }
   
   .hero__title {
-    /* font-family: "Montserrat", sans-serif; */
+    font-family: "Montserrat", sans-serif;
     color: #fff;
     font-size: 48px;
     font-weight: bold;
@@ -230,6 +230,7 @@ body {
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 10px;
+    font-family: "Montserrat", sans-serif;
   }
   
   .feature__description {
@@ -276,6 +277,7 @@ body {
     font-size: 36px;
     font-weight: bold;
     margin-bottom: 20px;
+    font-family: "Montserrat", sans-serif;
   }
   
 @media (max-width: 770px){
@@ -345,6 +347,17 @@ body {
     }
     .btn1{
       margin-left: 32.5%;
+    }
+  }
+  @media (max-width: 391px){
+    .hero{
+      padding-top: 17%;
+    }
+    .btn {
+      margin-left: 34.5%;
+    }
+    .btn1{
+      margin-left: 30.7%;
     }
   }
   
