--- a/contact.css
+++ b/contact.css
@@ -175,6 +175,7 @@ body {
   font-weight: 900;
   text-align: center;
   margin: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
 .flip-card-inner {
